@startuml

title __MAP's Class Diagram__\n

  namespace map {
    class map.DirectionsJSONParser {
        + g : GoogleMap
        + DirectionsJSONParser()
        {static} + parse()
        {static} - decodePoly()
    }
  }
  

  namespace map {
    class map.MapsActivity {
        + mMap : GoogleMap
        {static} + nameOrdered : ArrayList<String>
        + url : String
        ~ from : String
        ~ markerOptions : ArrayList<MarkerOptions>
        ~ nlist : ArrayList<String>
        ~ order1 : int[]
        {static} - TAG : String
        + getLocation()
        + onMapReady()
        # downloadData()
        # onCreate()
        {static} ~ downloadUrl()
        - getDirectionsUrl()
    }
  }
  

  namespace map {
    class map.ParserTask {
        {static} + g : GoogleMap
        {static} - jOrder : String
        + ParserTask()
        # doInBackground()
        # onPostExecute()
    }
  }
  

  namespace map {
    class map.load {
        {static} + s : ArrayList<String>
        ~ thisrandomid : String
        + setRandomID()
        # onCreate()
    }
  }
  

  map.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  map.MapsActivity -up-|> androidx.fragment.app.FragmentActivity
  map.ParserTask -up-|> android.os.AsyncTask
  map.load -up-|> androidx.appcompat.app.AppCompatActivity
  map.load o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  map.load o-- Login.DBOpenHelperUser : mDBOpenHelperUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
